--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hyperf/easywechat6",
+    "name": "pengxu/easywechat6",
     "type": "library",
     "license": "MIT",
     "keywords": [
