--- a/composer.json
+++ b/composer.json
@@ -19,23 +19,15 @@
     },
     "require": {
         "php": ">=8.0",
-        "w7corp/easywechat": "^6.3",
-        "ext-swoole": ">=4.5"
+        "w7corp/easywechat": "^6.11.1",
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.14",
+        "friendsofphp/php-cs-fixer": "^2.14|^3.0",
         "mockery/mockery": "^1.0",
         "phpstan/phpstan": "^0.12",
         "phpunit/phpunit": ">=7.0",
-        "swoole/ide-helper": "dev-master",
-        "swow/swow": "dev-develop",
-        "symfony/var-dumper": "^5.1",
-        "hyperf/context": "~2.2.0",
-        "hyperf/http-message":"~2.2.0",
-        "hyperf/http-server": "~2.2.0",
-        "hyperf/contract": "~2.2.0",
-        "hyperf/utils": "~2.2.0",
-        "psr/http-message": "^1.0"
+        "swoole/ide-helper": "^4.5",
+        "hyperf/context": "~2.2.0|^3.0",
     },
     "conflict": {
         "w7corp/easywechat": "<6.0"
