--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "license": "MIT",
     "keywords": [
         "php",
-        "hyperf"
+        "hyperf",
+        "easywechat"
     ],
     "description": "hyperf easywechat6",
     "autoload": {
@@ -19,7 +20,7 @@
     },
     "require": {
         "php": ">=8.0",
-        "w7corp/easywechat": "^6.11.1",
+        "w7corp/easywechat": "^6.11.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.14|^3.0",
@@ -27,7 +28,7 @@
         "phpstan/phpstan": "^0.12",
         "phpunit/phpunit": ">=7.0",
         "swoole/ide-helper": "^4.5",
-        "hyperf/context": "~2.2.0|^3.0",
+        "hyperf/context": "~2.2.0|^3.0"
     },
     "conflict": {
         "w7corp/easywechat": "<6.0"
